<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ProfileFragment">


        <include
            android:id="@+id/profileFragmentToolbar"
            layout="@layout/toolbar_simple"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/profileFragmentToolbar"
            app:layout_constraintBottom_toTopOf="@+id/profileFragmentAboutMeButton"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <ImageView
                    android:id="@+id/profileFragmentProfileImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/saeed_saghafi"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.5"
                    app:layout_constraintDimensionRatio="1:1"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profileFragmentNameMaterialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/iran_sans_mobile_medium"
                    android:textSize="22sp"
                    app:layout_constraintTop_toBottomOf="@+id/profileFragmentProfileImageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <androidx.cardview.widget.CardView
                    android:id="@+id/profileFragmentGithubCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="8dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/profileFragmentNameMaterialTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/profileFragmentLinkedInCardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        app:srcCompat="@drawable/ic_github"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/github" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/github"
                        android:textSize="20sp"
                        android:contentDescription="@string/app_name" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/profileFragmentLinkedInCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="8dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/profileFragmentNameMaterialTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/profileFragmentGithubCardView"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            app:srcCompat="@drawable/ic_linkedin"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/linkedin" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/linkedin"
                            android:textSize="20sp"
                            android:contentDescription="@string/app_name" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    app:layout_constraintTop_toBottomOf="@id/profileFragmentLinkedInCardView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>





        <com.google.android.material.button.MaterialButton
            android:id="@+id/profileFragmentAboutMeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            app:cornerRadius="12dp"
            android:padding="8dp"
            android:text="@string/about_me"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>